# docs/swagger.json
@@ -16,6 +16,54 @@
     },
     "host": "localhost:3010",
     "paths": {
+        "/login": {
+            "post": {
+                "description": "Logs the user by running a sql query against the DB checking wether if a user with the provided username and password exists. If it exists, returns it and stores User Id in session",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Logs a user with its username and password",
+                "parameters": [
+                    {
+                        "maxLength": 50,
+                        "minLength": 1,
+                        "description": "string valid",
+                        "name": "name",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "maxLength": 50,
+                        "minLength": 1,
+                        "description": "string valid",
+                        "name": "password",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/wallet.Wallet"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "get": {
                 "description": "Finds in DB a user with the userId Parameter provided by cookies",
@@ -42,7 +90,248 @@
                 }
             }
         },
+        "/user/Ballance/:Currency": {
+            "get": {
+                "description": "Sums every user wallets ballances for the given Currency",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Gets a user´s current total ballance",
+                "parameters": [
+                    {
+                        "maxLength": 50,
+                        "minLength": 1,
+                        "type": "string",
+                        "description": "string valid",
+                        "name": "currency",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/wallet.BallanceResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user/new": {
+            "post": {
+                "description": "Creates a user with given name, mail and (not implemented)password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Creates a user",
+                "parameters": [
+                    {
+                        "maxLength": 50,
+                        "minLength": 1,
+                        "description": "string valid",
+                        "name": "name",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "maxLength": 50,
+                        "minLength": 1,
+                        "description": "string valid",
+                        "name": "email",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "maxLength": 50,
+                        "minLength": 1,
+                        "description": "string valid",
+                        "name": "password",
+                        "in": "body",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/wallet.Wallet"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/user/transactions/:transactionid": {
+            "get": {
+                "description": "Finds in DB a transaction with the provided transactionid Parameter",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Gets a transaction by its id",
+                "parameters": [
+                    {
+                        "maxLength": 50,
+                        "minLength": 1,
+                        "type": "string",
+                        "description": "string valid",
+                        "name": "transactionid",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/transaction.Transaction"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/user/wallet/:walletid": {
+            "get": {
+                "description": "Finds in DB a wallet with the provided walletid Parameter",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Gets a user´s wallet with the wallet´s Id",
+                "parameters": [
+                    {
+                        "maxLength": 50,
+                        "minLength": 1,
+                        "type": "string",
+                        "description": "string valid",
+                        "name": "walletid",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/wallet.Wallet"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/user/wallet/:walletid/transactions": {
+            "get": {
+                "description": "Finds in DB a transaction with the provided walletid Parameter",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Gets all transactions of a certain wallet",
+                "parameters": [
+                    {
+                        "maxLength": 50,
+                        "minLength": 1,
+                        "type": "string",
+                        "description": "string valid",
+                        "name": "walletid",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/transaction.Transaction"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/user/wallets": {
+            "get": {
+                "description": "Finds every wallet in DB for the logged user using session parameters",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Gets the user´s wallets with their corresponding data",
+                "parameters": [
+                    {
+                        "maxLength": 50,
+                        "minLength": 1,
+                        "type": "string",
+                        "description": "string valid",
+                        "name": "walletid",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/wallet.Wallet"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/wallet/send": {
             "post": {
                 "description": "before checking if the origin wallet has funds, it sends the declared amount to the destination wallet and creates a trnsaction",
                 "consumes": [
@@ -97,81 +386,6 @@
                     }
                 }
             }
-        },
-        "/user/wallet/:walletid": {
-            "get": {
-                "description": "Finds in DB a wallet with the provided walletid Parameter",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Gets a user´s wallet with the wallet´s Id",
-                "parameters": [
-                    {
-                        "maxLength": 50,
-                        "minLength": 1,
-                        "type": "string",
-                        "description": "string valid",
-                        "name": "walletid",
-                        "in": "path"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/wallet.Wallet"
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/user/wallets": {
-            "get": {
-                "description": "Finds every wallet in DB for the logged user using session parameters",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Gets the user´s wallets with their corresponding data",
-                "parameters": [
-                    {
-                        "maxLength": 50,
-                        "minLength": 1,
-                        "type": "string",
-                        "description": "string valid",
-                        "name": "walletid",
-                        "in": "path"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/wallet.Wallet"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -184,6 +398,42 @@
                 "valid": {
                     "description": "Valid is true if Time is not NULL",
                     "type": "boolean"
+                }
+            }
+        },
+        "transaction.Transaction": {
+            "type": "object",
+            "required": [
+                "amount",
+                "destinationId",
+                "originId",
+                "status",
+                "transactionId"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number",
+                    "maximum": 1000000,
+                    "minimum": 1
+                },
+                "created": {
+                    "$ref": "#/definitions/sql.NullTime"
+                },
+                "destinationId": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "originId": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "status": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "transactionId": {
+                    "type": "string",
+                    "maxLength": 50
                 }
             }
         },
